<resources>
    <string name="app_name">DS Customer</string>


    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="dairy_system">Dairy System</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="connected_milkman">Connected Milkman :</string>
    <string name="milkman">Milkman :</string>
    <string name="rate_milkman">Rate Milkman</string>
    <string name="disconnect">Disconnect</string>
    <string name="due_amount">Due Amount</string>
    <string name="products_available">Products Available :</string>
    <string name="no_product_available">Currently No Product is Available</string>
    <string name="raise_query">Raise Query</string>
    <string name="enter_description">Enter Description</string>
    <string name="send">Send</string>
    <string name="pr_kg">pr KG</string>
    <string name="total_amount">Total Amount</string>
    <string name="mikman_name">Milkman Name</string>
    <string name="milkman_no">MilkMan No.</string>
    <string name="details">Details</string>

    <string name="connect_to_milkman">Connect to Milkman</string>
    <string name="self_log">Self Log</string>
    <string name="good_morning">Good Morning,</string>
    <string name="or">OR</string>
    <string name="select_milkman">SELECT MILKMAN</string>
    <string name="next">Next</string>
    <string name="select_milk_type">SELECT MILK TYPE</string>
    <string name="amount">Amount</string>
    <string name="enter_quantity">ENTER QUANTITY</string>
    <string name="back">Back</string>
    <string name="added">Added</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="usual_order">USUAL ORDER</string>
    <string name="edit">Edit</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="add_another">Add Another</string>

    <string name="few_more_steps">Few more steps</string>
    <string name="verification">VERIFICATION</string>
    <string name="entered_mobile_number">Entered mobile number</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="resend_the_code_again_in">Resend the code again in</string>
    <string name="wrong_otp">WRONG OTP</string>
    <string name="enter_mobile_number">ENTER MOBILE NUMBER</string>
    <string name="welcome">WELCOME/स्वागत</string>
    <string name="register">REGISTER</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email_optional">Enter E-mail /optional</string>
    <string name="proceed">continue</string>
    <string name="enter_house_number">Enter House Number</string>
    <string name="enter_colony_society">Enter Colony/Society</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_postal_code">Enter Postal code</string>
    <string name="logout">Logout</string>
    <string name="recommendations">Recommendations</string>
    <string name="about">About</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="change_language">Change Language/भाषा बदलो</string>
    <string name="choose_language">Choose Language/भाषा चुनें</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>

    <string name="add_self_log">Add Self Log</string>
    <string name="select_month_and_year">Select Month and Year</string>
    <string name="ask_milkman_to_scan_qr_code_to_connect">Ask Milkman to scan QR code to connect</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="export_as">Export As</string>
    <string name="pdf">PDF</string>
    <string name="excel">Excel</string>
    <string name="last_order">LAST ORDER:</string>
    <string name="order_invoice">Order Invoice</string>
    <string name="you_are_not_connected_to_any_milkman">You are not connected to any milkman</string>

    <string name="add_milkman">ADD MILKMAN</string>
    <string name="milkman_s_name">Milkman\'s Name</string>
    <string name="milkman_s_mobile_number">Milkman\'s Mobile Number</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="product_s_name">Product\'s Name</string>
    <string name="product_s_price">Product\'s Price</string>
    <string name="usual_quantity_delivered_optional">Usual Quantity Delivered (Optional)</string>
    <string name="skip">SKIP</string>
    <string name="add_new_milkman">Add New Milkman</string>
    <string name="add_new_product">Add New Product</string>
    <string name="recommendation">Recommendation</string>
    <string name="rating">Rating</string>
    <string name="categories_offered">Categories Offered</string>
    <string name="categories">categories</string>
    <string name="add_order">Add Order</string>
    <string name="delivery_person_near_you">DELIVERY PERSON NEAR YOU</string>
    <string name="name">Name:</string>
    <string name="almost_there">Almost there.</string>

    <string name="name_is_required">Name is required</string>
    <string name="invalid_mobile_number">Invalid Mobile Number</string>
    <string name="product_name_is_required">Product Name is Required</string>
    <string name="product_price_is_required">Product Price is Required</string>
    <string name="add_atleast_one_product">Add atleast one Product</string>
    <string name="selflog_added_successfully">SelfLog Added successfully</string>
    <string name="you_have_no_past_order">You have no past orders.</string>
    <string name="milkman_disconnected">Milkman Disconnected</string>
    <string name="are_you_sure_to_disconnect">Are you sure to disconnect ?</string>
    <string name="clear_due_amount">Some Amount is still due, clear the Due Amount before Disconnecting</string>
    <string name="download_pdf_viewer">Download a PDF Viewer to see the generated PDF</string>
    <string name="no_order_available">No order available</string>
    <string name="ok">OK</string>
    <string name="allow_storage_access">You need to allow access to Storage</string>
    <string name="code_is_wrong">Verification Code is wrong</string>
    <string name="select_one_milkman">Please Select any one Milkman to proceed</string>
    <string name="select_one_to_proceed">Please select atleast one type to proceed</string>
    <string name="fill_all_quantities">Please fill all the quantity field</string>
    <string name="update_usual_order">Usual Order is now Updated</string>
    <string name="orders_added_to_selflog">Orders Added to Self log</string>
    <string name="product_added_successfully">Product Added Successfully</string>
    <string name="query_raised_successfully">Query has been raised successfully</string>
    <string name="first_complete_editing">Cannot Select, First Complete the Editing</string>
    <string name="mobile_no">Mobile No.:</string>

    <string name="menu">Menu</string>
    <string name="menu_tutorial">From here you can manage your profile and other app settings</string>
    <string name="connect_milkman_tutorial">You can connect to milkman delivering milk to you from here</string>
    <string name="self_log_tutorial">You can add and manage your self log from here</string>
    <string name="order_tutorial">You can tap on a date to view order of that particular date</string>
    <string name="connected_milkman_tutorial">View the list of connected milkman and their details here.</string>

    <string name="settle_due_amount_to_zero">Settle Due Amount to Zero</string>
    <string name="sure_to_settle_to_zero">Are you sure to Settle Due Amount To Zero</string>
    <string name="amount_updated_to_zero">Due Amount Updated to Zero</string>
    <string name="amount_is_already_zero">Due Amount is already zero</string>

</resources>