<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/connect"
        android:icon="@drawable/ic_baseline_group_add_24"
        android:title="@string/connect_to_milkman"
        />

    <item
        android:id="@+id/add_self_log"
        android:icon="@drawable/ic_baseline_person_add_24"
        android:title="@string/add_self_log"
        />

    <item
        android:id="@+id/recommendations"
        android:icon="@drawable/ic_baseline_stars_24"
        android:title="@string/recommendations"
        />
    <item
        android:id="@+id/change_lang"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/change_language"
        />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_baseline_help_24"
        android:title="@string/about"
        />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/sign_out_icon"
        android:title="@string/logout"
        />
</menu>