<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30sp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ed_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:hint="@string/product_name"
        android:inputType="text"
        android:padding="10sp"
        android:textColor="#000" />

    <EditText
        android:id="@+id/ed_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:hint="@string/price"
        android:inputType="number"
        android:padding="10sp"
        android:textColor="#000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/btnl_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="#0589FF"
            android:padding="10sp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/add_btnl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="#0589FF"
            android:padding="10sp"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="18sp" />
    </LinearLayout>

    </LinearLayout>