<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendQuery">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raise_query"
        android:layout_margin="10sp"
        android:textSize="18sp"
        android:id="@+id/tv_raise_query"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_description"
        android:layout_below="@+id/tv_raise_query"
        android:layout_margin="10sp"
        android:textColor="#000"
        android:textSize="20sp"
        android:id="@+id/enter_description"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/enter_description"
        android:id="@+id/description"
        android:layout_margin="10sp"
        android:maxLines="5"
        android:backgroundTint="#0693F1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/description"
        android:layout_margin="10sp"
        android:text="@string/send"
        android:id="@+id/send"
        android:textAllCaps="false"
        android:backgroundTint="#0693F1"
        android:textColor="#FFF"
        android:background="@drawable/rounded_rectangle"
        android:textSize="20sp"
        android:padding="10sp"
        />

</RelativeLayout>