<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMilkman">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/background_2"/>

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="20sp"
        android:id="@+id/back_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dairy_system"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:id="@+id/dairy_system"
        android:layout_marginBottom="40dp"
        android:textColor="#000"
        android:layout_marginTop="20sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:padding="10sp"
        android:id="@+id/rl"
        android:layout_below="@+id/dairy_system"
        android:backgroundTint="#F3EFEF"
        android:layout_margin="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_milkman"
            android:layout_margin="5sp"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:layout_alignParentTop="true"
            android:id="@+id/tv_add_milkman"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milkman_s_name"
            android:layout_below="@+id/tv_add_milkman"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:id="@+id/tv_milkman_name"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:id="@+id/ed_milkman_name"
            android:layout_below="@+id/tv_milkman_name"
            android:layout_marginStart="5sp"
            android:inputType="text"
            android:layout_marginBottom="5sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milkman_s_mobile_number"
            android:layout_below="@+id/ed_milkman_name"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:id="@+id/tv_milkman_mobile"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+91"
            android:layout_marginTop="10sp"
            android:id="@+id/code"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/tv_milkman_mobile"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:id="@+id/ed_milkman_mobile"
            android:layout_below="@+id/tv_milkman_mobile"
            android:layout_marginStart="10sp"
            android:inputType="phone"
            android:layout_toEndOf="@id/code"
            />

    </RelativeLayout>

    <Button
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:text="@string/next"
        android:id="@+id/btnl_next"
        android:textAllCaps="false"
        android:layout_below="@id/rl"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="20sp"
        />

</RelativeLayout>