<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductAndUsualOrder">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/background_2"/>

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="20sp"
        android:id="@+id/back_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dairy_system"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:id="@+id/dairy_system"
        android:layout_marginBottom="20dp"
        android:textColor="#000"
        android:layout_marginTop="20sp"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:padding="10sp"
        android:id="@+id/rl"
        android:layout_below="@+id/dairy_system"
        android:backgroundTint="#F3EFEF"
        android:layout_margin="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:layout_margin="5sp"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:layout_alignParentTop="true"
            android:id="@+id/tv_add_product"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_s_name"
            android:layout_below="@+id/tv_add_product"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:id="@+id/tv_product_name"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:id="@+id/ed_product_name"
            android:layout_below="@+id/tv_product_name"
            android:layout_marginStart="5sp"
            android:layout_marginBottom="5sp"
            android:inputType="text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_s_price"
            android:layout_below="@+id/ed_product_name"
            android:layout_marginStart="5sp"
            android:id="@+id/tv_product_price"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:id="@+id/ed_product_price"
            android:layout_below="@+id/tv_product_price"
            android:layout_marginStart="5sp"
            android:layout_marginBottom="5sp"
            android:inputType="number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rs/L"
            android:layout_marginTop="10sp"
            android:layout_marginStart="5sp"
            android:id="@+id/code"
            android:layout_toEndOf="@id/ed_product_price"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/tv_product_price"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usual_quantity_delivered_optional"
            android:layout_below="@+id/ed_product_price"
            android:layout_marginStart="5sp"
            android:id="@+id/tv_usual_quantity"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:id="@+id/ed_usual_quantity"
            android:layout_below="@+id/tv_usual_quantity"
            android:layout_marginStart="5sp"
            android:inputType="number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="L"
            android:layout_marginTop="10sp"
            android:layout_marginStart="5sp"
            android:id="@+id/l"
            android:layout_toEndOf="@id/ed_usual_quantity"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/tv_usual_quantity"
            />

        <Button
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:text="@string/add"
            android:id="@+id/btnl_add"
            android:textAllCaps="false"
            android:layout_below="@id/tv_usual_quantity"
            android:background="@drawable/rounded_rectangle"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="10sp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl"
        android:layout_marginStart="40sp"
        android:weightSum="4"
        android:layout_marginEnd="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product Name"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_weight="2"
            android:id="@+id/pl_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5L"
            android:textSize="18sp"
            android:layout_weight="1"
            android:textColor="#000"
            android:id="@+id/pl_quantity"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\@ 56 Rs/L"
            android:textSize="18sp"
            android:textColor="#FF0000"
            android:layout_weight="1"
            android:id="@+id/pl_price"
            />

    </LinearLayout>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20sp"
        android:id="@+id/btnl_finish"
        android:background="@drawable/rounded_rectangle"
        />

</RelativeLayout>